custom.css
* {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
}

body {
  transition: background-color 0.3s ease-in;
}

.logout-link {
  align-self: center;
}
.article-image {
  align-self: flex-end;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.card {
  max-width: 65vw;
  min-height: 400px;
}

/* MAJOR TODO TODO: TODO */
@media all and (max-width: 736px) {
  .card {
    max-width: 100vw;
    width: 100vw;
  }
}

.flex-one-third {
  flex: 2;
}
.flex-two-thirds {
  flex: 3;
}

.space-around {
  justify-content: space-between;
}

body::-moz-selection {
  background-color: #96ccff;
}
body::selection {
  background-color: #96ccff;
}

.hidden {
  transform: translateY(-1000px);
}
.animate {
  transition: all 1s ease-in-out;
}

